--- a/src/scss/index.scss
+++ b/src/scss/index.scss
@@ -15,6 +15,7 @@ body {
     transition: 0.5s ease-in;
     position: relative;
     z-index: 2;
+    overflow: hidden;
     //
     // pointer-events: none;
 }
